fix: button wrapped in Tooltip within ButtonGroup loosing style

--- a/packages/vitzik-ui/src/components/ButtonGroup/ButtonGroup.scss
+++ b/packages/vitzik-ui/src/components/ButtonGroup/ButtonGroup.scss
@@ -4,14 +4,20 @@
     background-color: map-get($theme-colors, 'dark-secondary');
     border-radius: 5px;
     display: inline-flex;
-    > .btn {
+    .btn {
         border: none;
         border-radius: 0;
-        &:first-child {
+    }
+    > :first-child {
+        &.btn,
+        .btn {
             border-bottom-left-radius: 5px;
             border-top-left-radius: 5px;
         }
-        &:last-child {
+    }
+    > :last-child {
+        &.btn,
+        .btn {
             border-bottom-right-radius: 5px;
             border-top-right-radius: 5px;
         }
